test/sh/error/bad_expr_func_param.sk
f(b: bool) {
	# do nothing
}

f(1 + 2)